Criando paginas e rotas

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "Food Commerce",
+  "short_name": "Aplicação React",
   "name": "Templade Dev Samurai de aplicação React",
   "icons": [
     {
