--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.3",
     "s": "^1.0.0",
     "styled-components": "^5.3.5",
     "styled-normalize": "^8.0.7",
